@@ -1,32 +1,0 @@
-#!/bin/sh
-set -e
-
-if [ "$1" != "configure" ]; then
-        exit 0
-fi
-
-#enable cgid, but only on new installs.
-if [ -z "$2" ]; then
-	a2dismod cgi >/dev/null || true
-        a2enmod cgid >/dev/null || echo "It looks like you've deleted /etc/apache2/mods-available/cgid.load, so mod_cgid cannot be enabled.  To fix this, please purge and reinstall apache2.2-common."
-fi
-
-# Migrate our kill symlinks, including ones the user may have done an s/S/K/ to:
-for i in `seq 0 6`; do
-	if [ -L /etc/rc"$i".d/K91apache2 ]; then
-		mv /etc/rc"$i".d/K91apache2 \
-		   /etc/rc"$i".d/K09apache2
-	fi
-done
-
-if [ -x "/etc/init.d/apache2" ]; then
-        if [ -x /usr/sbin/invoke-rc.d ]; then
-                invoke-rc.d apache2 start ||true
-        else
-                /etc/init.d/apache2 start ||true
-        fi
-fi
-
-#DEBHELPER#
-
-exit 0
